Fixed wraps

--- a/packages/lightwallet/desktop/src/app/components/loading-spinner/loading-spinner.component.sass
+++ b/packages/lightwallet/desktop/src/app/components/loading-spinner/loading-spinner.component.sass
@@ -1,6 +1,6 @@
 .fullScreenLoader
   position: fixed
-  width: calc(100vw - 300px)
+  width: calc(100vw - 260px)
   height: 100vh
   right: 0
   top: 0
